# sichelgaita.ai

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-workspace.yaml  setup.ps1  setup.sh
backend/: .env.test  .gitignore  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/v1/: analysis.py  files.py
backend/app/core/: config.py  database.py
backend/app/models/: analysis.py  file.py
backend/app/services/: ai_analyzer.py  data_cleaner.py  file_processor.py  insight_generator.py  storage.py
backend/migrations/: 001_files_schema.sql  002_analysis_schema.sql
backend/tests/: conftest.py  test_ai_analyzer.py  test_analysis_api.py  test_config.py  test_data_cleaner.py  test_file_processor.py  test_main.py
frontend/: README.md  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/workspace/: page.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/components/workspace/: FileCard.tsx  FileUploader.tsx  ProjectSidebar.tsx
frontend/src/types/: index.ts
